--- a/style.css
+++ b/style.css
@@ -51,6 +51,53 @@ box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
   font-style: italic;
 }
 
+
+/* This is the Button */
+.button-container {
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+button:hover{
+  filter:brightness(150%);
+}
+
+button:active{
+  transform: translate(0, 0.3rem);
+  box-shadow: 0 0.1rem rgba(255, 255, 255, 0.4);
+}
+
+
+#twitter:hover{
+color: #38a1f3;
+}
+
+.fa-twitter{
+  font-size: 1.2rem;
+}
+
+
+
+button{
+  cursor: pointer;
+  font-size: 1.2rem;
+  height: 2 rem;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  background: #333;
+  outline: none;
+  padding: 0.5rem 1.5rem;
+  box-shadow: 0 0.3rem rgba(121, 121, 121, 0.2);
+
+}
+
+
+
+
+
+
 /* Media Query */
 
 @@media screen and (max-width: 1000px) {
