--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ border-radius: 10px;
 background-color: rgba(255, 255, 255, 0.4);
 box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
 
+/* margin-left: auto; */
+
 }
 
 .quote-text{
