+ Minor Style chagnes

--- a/style.css
+++ b/style.css
@@ -102,12 +102,12 @@ button{
 
 /* Media Query */
 
-@@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1000px) {
   .quote-container{
     margin-left: auto 10px;
   }
 
-  ..quote-text{
+  .quote-text{
    font-size: 0.5rem;
   }
 
